@@ -31,6 +31,7 @@ import org.jabref.gui.DialogService;
 import org.jabref.gui.DragAndDropDataFormats;
 import org.jabref.gui.Globals;
 import org.jabref.gui.LibraryTab;
+import org.jabref.gui.LibraryTabContainer;
 import org.jabref.gui.StateManager;
 import org.jabref.gui.actions.StandardActions;
 import org.jabref.gui.edit.EditAction;
@@ -53,6 +54,7 @@ import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.database.event.EntriesAddedEvent;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.BibEntryTypesManager;
+import org.jabref.model.entry.BibtexString;
 import org.jabref.model.search.rules.SearchRules.SearchFlags;
 import org.jabref.model.util.FileUpdateMonitor;
 import org.jabref.preferences.PreferencesService;
@@ -79,11 +81,13 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
     private final ClipBoardManager clipBoardManager;
     private final BibEntryTypesManager entryTypesManager;
     private final TaskExecutor taskExecutor;
+    private final UndoManager undoManager;
     private long lastKeyPressTime;
     private String columnSearchTerm;
 
     public MainTable(MainTableDataModel model,
                      LibraryTab libraryTab,
+                     LibraryTabContainer tabContainer,
                      BibDatabaseContext database,
                      PreferencesService preferencesService,
                      DialogService dialogService,
@@ -104,7 +108,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         this.clipBoardManager = clipBoardManager;
         this.entryTypesManager = entryTypesManager;
         this.taskExecutor = taskExecutor;
-        UndoManager undoManager = libraryTab.getUndoManager();
+        this.undoManager = libraryTab.getUndoManager();
         MainTablePreferences mainTablePreferences = preferencesService.getMainTablePreferences();
 
         importHandler = new ImportHandler(
@@ -126,7 +130,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                         database,
                         preferencesService,
                         preferencesService.getMainTableColumnPreferences(),
-                        libraryTab.getUndoManager(),
+                        undoManager,
                         dialogService,
                         stateManager,
                         taskExecutor).createColumns());
@@ -229,7 +233,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
             if (this.getSortOrder().isEmpty()) {
                 return;
             }
-            this.jumpToSearchKey(getSortOrder().get(0), key);
+            this.jumpToSearchKey(getSortOrder().getFirst(), key);
         });
 
         database.getDatabase().registerListener(this);
@@ -238,13 +242,13 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                 database,
                 preferencesService,
                 preferencesService.getMainTableColumnPreferences(),
-                libraryTab.getUndoManager(),
+                undoManager,
                 dialogService,
                 stateManager,
                 taskExecutor);
 
         // Enable the header right-click menu.
-        new MainTableHeaderContextMenu(this, rightClickMenuFactory).show(true);
+        new MainTableHeaderContextMenu(this, rightClickMenuFactory, tabContainer, keyBindingRepository, dialogService).show(true);
     }
 
     private void updateSortOrder() {
@@ -256,11 +260,15 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
 
     /**
      * This is called, if a user starts typing some characters into the keyboard with focus on main table. The {@link MainTable} will scroll to the cell with the same starting column value and typed string
+     * If the user presses any other special key as well, e.g. alt or shift we don't jump
      *
      * @param sortedColumn The sorted column in {@link MainTable}
      * @param keyEvent     The pressed character
      */
     private void jumpToSearchKey(TableColumn<BibEntryTableViewModel, ?> sortedColumn, KeyEvent keyEvent) {
+        if (keyEvent.isAltDown() || keyEvent.isControlDown() || keyEvent.isMetaDown() || keyEvent.isShiftDown()) {
+            return;
+        }
         if ((keyEvent.getCharacter() == null) || (sortedColumn == null)) {
             return;
         }
@@ -303,25 +311,30 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         List<BibEntry> selectedEntries = getSelectedEntries();
 
         if (!selectedEntries.isEmpty()) {
+            List<BibtexString> stringConstants = getUsedStringValues(selectedEntries);
             try {
-                clipBoardManager.setContent(selectedEntries, entryTypesManager);
-                dialogService.notify(libraryTab.formatOutputMessage(Localization.lang("Copied"), selectedEntries.size()));
+                if (stringConstants.isEmpty()) {
+                    clipBoardManager.setContent(selectedEntries, entryTypesManager);
+                } else {
+                    clipBoardManager.setContent(selectedEntries, entryTypesManager, stringConstants);
+                }
+                dialogService.notify(Localization.lang("Copied %0 entry(ies)", selectedEntries.size()));
             } catch (IOException e) {
-                LOGGER.error("Error while copying selected entries to clipboard", e);
+                LOGGER.error("Error while copying selected entries to clipboard.", e);
             }
         }
     }
 
     public void cut() {
         copy();
-        libraryTab.delete(true);
+        libraryTab.delete(StandardActions.CUT);
     }
 
     private void setupKeyBindings(KeyBindingRepository keyBindings) {
-        EditAction pasteAction = new EditAction(StandardActions.PASTE, libraryTab.frame(), stateManager);
-        EditAction copyAction = new EditAction(StandardActions.COPY, libraryTab.frame(), stateManager);
-        EditAction cutAction = new EditAction(StandardActions.CUT, libraryTab.frame(), stateManager);
-        EditAction deleteAction = new EditAction(StandardActions.DELETE_ENTRY, libraryTab.frame(), stateManager);
+        EditAction pasteAction = new EditAction(StandardActions.PASTE, () -> libraryTab, stateManager, undoManager);
+        EditAction copyAction = new EditAction(StandardActions.COPY, () -> libraryTab, stateManager, undoManager);
+        EditAction cutAction = new EditAction(StandardActions.CUT, () -> libraryTab, stateManager, undoManager);
+        EditAction deleteAction = new EditAction(StandardActions.DELETE_ENTRY, () -> libraryTab, stateManager, undoManager);
 
         this.addEventFilter(KeyEvent.KEY_PRESSED, event -> {
             if (event.getCode() == KeyCode.ENTER) {
@@ -388,9 +401,8 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         if (entriesToAdd.isEmpty()) {
             return;
         }
-        for (BibEntry entry : entriesToAdd) {
-            importHandler.importEntryWithDuplicateCheck(database, entry);
-        }
+
+        importHandler.importEntriesWithDuplicateCheck(database, entriesToAdd);
     }
 
     private List<BibEntry> handleNonBibTeXStringData(String data) {
@@ -409,9 +421,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
     }
 
     public void dropEntry(List<BibEntry> entriesToAdd) {
-        for (BibEntry entry : entriesToAdd) {
-            importHandler.importEntryWithDuplicateCheck(database, (BibEntry) entry.clone());
-        }
+        importHandler.importEntriesWithDuplicateCheck(database, entriesToAdd);
     }
 
     private void handleOnDragOver(TableRow<BibEntryTableViewModel> row, BibEntryTableViewModel item, DragEvent event) {
@@ -474,7 +484,8 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
             // Center -> link files to entry
             // Depending on the pressed modifier, move/copy/link files to drop target
             switch (ControlHelper.getDroppingMouseLocation(row, event)) {
-                case TOP, BOTTOM -> importHandler.importFilesInBackground(files).executeWith(taskExecutor);
+                case TOP, BOTTOM ->
+                        importHandler.importFilesInBackground(files).executeWith(taskExecutor);
                 case CENTER -> {
                     BibEntry entry = target.getEntry();
                     switch (event.getTransferMode()) {
@@ -523,10 +534,6 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         return model;
     }
 
-    public BibEntry getEntryAt(int row) {
-        return model.getEntriesFilteredAndSorted().get(row).getEntry();
-    }
-
     public List<BibEntry> getSelectedEntries() {
         return getSelectionModel()
                 .getSelectedItems()
@@ -542,10 +549,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                     .findFirst();
     }
 
-    public static List<MainTableColumnModel> toColumnModels(List<TableColumn<BibEntryTableViewModel, ?>> columns) {
-        return columns.stream()
-                      .filter(col -> col instanceof MainTableColumn<?>)
-                      .map(column -> ((MainTableColumn<?>) column).getModel())
-                      .collect(Collectors.toList());
+    private List<BibtexString> getUsedStringValues(List<BibEntry> entries) {
+        return database.getDatabase().getUsedStrings(entries);
     }
 }
