@@ -6,7 +6,7 @@ import java.util.List;
 import java.util.Optional;
 
 import org.jabref.gui.DialogService;
-import org.jabref.gui.desktop.os.NativeDesktop;
+import org.jabref.gui.desktop.JabRefDesktop;
 import org.jabref.gui.util.DirectoryDialogConfiguration;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.openoffice.OpenOfficePreferences;
@@ -32,12 +32,10 @@ public class DetectOpenOfficeInstallation {
     }
 
     public Optional<Path> selectInstallationPath() {
-        final NativeDesktop nativeDesktop = OS.getNativeDesktop();
-
         dialogService.showInformationDialogAndWait(Localization.lang("Could not find OpenOffice/LibreOffice installation"),
                 Localization.lang("Unable to autodetect OpenOffice/LibreOffice installation. Please choose the installation directory manually."));
         DirectoryDialogConfiguration dirDialogConfiguration = new DirectoryDialogConfiguration.Builder()
-                .withInitialDirectory(nativeDesktop.getApplicationDirectory())
+                .withInitialDirectory(JabRefDesktop.getApplicationDirectory())
                 .build();
         return dialogService.showDirectorySelectionDialog(dirDialogConfiguration);
     }
@@ -79,7 +77,7 @@ public class DetectOpenOfficeInstallation {
         }
 
         if (installDirs.size() == 1) {
-            return Optional.of(installDirs.get(0).toAbsolutePath());
+            return Optional.of(installDirs.getFirst().toAbsolutePath());
         }
 
         return dialogService.showChoiceDialogAndWait(
