@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 
 import javafx.beans.property.BooleanProperty;
 import javafx.beans.property.ListProperty;
@@ -19,21 +20,30 @@ import javafx.collections.FXCollections;
 import javafx.scene.control.SpinnerValueFactory;
 
 import org.jabref.gui.DialogService;
+import org.jabref.gui.Globals;
 import org.jabref.gui.desktop.JabRefDesktop;
 import org.jabref.gui.preferences.PreferenceTabViewModel;
+import org.jabref.gui.remote.CLIMessageHandler;
+import org.jabref.gui.telemetry.TelemetryPreferences;
 import org.jabref.gui.theme.Theme;
 import org.jabref.gui.theme.ThemeTypes;
 import org.jabref.gui.util.DirectoryDialogConfiguration;
 import org.jabref.gui.util.FileDialogConfiguration;
 import org.jabref.logic.l10n.Language;
 import org.jabref.logic.l10n.Localization;
+import org.jabref.logic.net.ssl.TrustStoreManager;
+import org.jabref.logic.remote.RemotePreferences;
+import org.jabref.logic.remote.RemoteUtil;
 import org.jabref.logic.util.StandardFileType;
 import org.jabref.model.database.BibDatabaseMode;
+import org.jabref.model.entry.BibEntryTypesManager;
 import org.jabref.model.strings.StringUtil;
+import org.jabref.model.util.FileUpdateMonitor;
 import org.jabref.preferences.FilePreferences;
+import org.jabref.preferences.InternalPreferences;
 import org.jabref.preferences.LibraryPreferences;
+import org.jabref.preferences.MergeDialogPreferences;
 import org.jabref.preferences.PreferencesService;
-import org.jabref.preferences.TelemetryPreferences;
 import org.jabref.preferences.WorkspacePreferences;
 
 import de.saxsys.mvvmfx.utils.validation.CompositeValidator;
@@ -48,12 +58,15 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
             new SpinnerValueFactory.IntegerSpinnerValueFactory(9, Integer.MAX_VALUE);
 
     private final ReadOnlyListProperty<Language> languagesListProperty =
-            new ReadOnlyListWrapper<>(FXCollections.observableArrayList(Language.values()));
+            new ReadOnlyListWrapper<>(FXCollections.observableArrayList(Language.getSorted()));
     private final ObjectProperty<Language> selectedLanguageProperty = new SimpleObjectProperty<>();
 
     private final ReadOnlyListProperty<ThemeTypes> themesListProperty =
             new ReadOnlyListWrapper<>(FXCollections.observableArrayList(ThemeTypes.values()));
     private final ObjectProperty<ThemeTypes> selectedThemeProperty = new SimpleObjectProperty<>();
+
+    private final BooleanProperty themeSyncOsProperty = new SimpleBooleanProperty();
+
     private final StringProperty customPathToThemeProperty = new SimpleStringProperty();
 
     private final BooleanProperty fontOverrideProperty = new SimpleBooleanProperty();
@@ -63,7 +76,6 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
     private final BooleanProperty showAdvancedHintsProperty = new SimpleBooleanProperty();
     private final BooleanProperty inspectionWarningDuplicateProperty = new SimpleBooleanProperty();
     private final BooleanProperty confirmDeleteProperty = new SimpleBooleanProperty();
-
     private final BooleanProperty collectTelemetryProperty = new SimpleBooleanProperty();
 
     private final ListProperty<BibDatabaseMode> bibliographyModeListProperty = new SimpleListProperty<>();
@@ -81,19 +93,34 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
     private final TelemetryPreferences telemetryPreferences;
     private final LibraryPreferences libraryPreferences;
     private final FilePreferences filePreferences;
+    private final RemotePreferences remotePreferences;
+    private final MergeDialogPreferences mergeDialogPreferences;
 
     private final Validator fontSizeValidator;
     private final Validator customPathToThemeValidator;
 
     private final List<String> restartWarning = new ArrayList<>();
+    private final BooleanProperty remoteServerProperty = new SimpleBooleanProperty();
+    private final StringProperty remotePortProperty = new SimpleStringProperty("");
+    private final Validator remotePortValidator;
+    private final InternalPreferences internalPreferences;
+    private final BooleanProperty versionCheckProperty = new SimpleBooleanProperty();
+    private final FileUpdateMonitor fileUpdateMonitor;
+    private final BibEntryTypesManager entryTypesManager;
+    private final TrustStoreManager trustStoreManager;
 
-    public GeneralTabViewModel(DialogService dialogService, PreferencesService preferences) {
+    public GeneralTabViewModel(DialogService dialogService, PreferencesService preferences, FileUpdateMonitor fileUpdateMonitor, BibEntryTypesManager entryTypesManager) {
         this.dialogService = dialogService;
         this.preferences = preferences;
         this.workspacePreferences = preferences.getWorkspacePreferences();
         this.telemetryPreferences = preferences.getTelemetryPreferences();
         this.libraryPreferences = preferences.getLibraryPreferences();
         this.filePreferences = preferences.getFilePreferences();
+        this.remotePreferences = preferences.getRemotePreferences();
+        this.internalPreferences = preferences.getInternalPreferences();
+        this.mergeDialogPreferences = preferences.getMergeDialogPreferences();
+        this.fileUpdateMonitor = fileUpdateMonitor;
+        this.entryTypesManager = entryTypesManager;
 
         fontSizeValidator = new FunctionBasedValidator<>(
                 fontSizeProperty,
@@ -104,7 +131,7 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
                         return false;
                     }
                 },
-                ValidationMessage.error(String.format("%s > %s %n %n %s",
+                ValidationMessage.error("%s > %s %n %n %s".formatted(
                         Localization.lang("General"),
                         Localization.lang("Font settings"),
                         Localization.lang("You must enter an integer value higher than 8."))));
@@ -112,10 +139,31 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
         customPathToThemeValidator = new FunctionBasedValidator<>(
                 customPathToThemeProperty,
                 input -> !StringUtil.isNullOrEmpty(input),
-                ValidationMessage.error(String.format("%s > %s %n %n %s",
+                ValidationMessage.error("%s > %s %n %n %s".formatted(
                         Localization.lang("General"),
                         Localization.lang("Visual theme"),
                         Localization.lang("Please specify a css theme file."))));
+
+        remotePortValidator = new FunctionBasedValidator<>(
+                remotePortProperty,
+                input -> {
+                    try {
+                        int portNumber = Integer.parseInt(remotePortProperty().getValue());
+                        return RemoteUtil.isUserPort(portNumber);
+                    } catch (NumberFormatException ex) {
+                        return false;
+                    }
+                },
+                ValidationMessage.error("%s > %s %n %n %s".formatted(
+                        Localization.lang("Network"),
+                        Localization.lang("Remote operation"),
+                        Localization.lang("You must enter an integer value in the interval 1025-65535"))));
+
+        this.trustStoreManager = new TrustStoreManager(Path.of(preferences.getSSLPreferences().getTruststorePath()));
+    }
+
+    public ValidationStatus remotePortValidationStatus() {
+        return remotePortValidator.getValidationStatus();
     }
 
     @Override
@@ -125,13 +173,16 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
         // The light theme is in fact the absence of any theme modifying 'base.css'. Another embedded theme like
         // 'dark.css', stored in the classpath, can be introduced in {@link org.jabref.gui.theme.Theme}.
         switch (workspacePreferences.getTheme().getType()) {
-            case DEFAULT -> selectedThemeProperty.setValue(ThemeTypes.LIGHT);
-            case EMBEDDED -> selectedThemeProperty.setValue(ThemeTypes.DARK);
+            case DEFAULT ->
+                    selectedThemeProperty.setValue(ThemeTypes.LIGHT);
+            case EMBEDDED ->
+                    selectedThemeProperty.setValue(ThemeTypes.DARK);
             case CUSTOM -> {
                 selectedThemeProperty.setValue(ThemeTypes.CUSTOM);
                 customPathToThemeProperty.setValue(workspacePreferences.getTheme().getName());
             }
         }
+        themeSyncOsProperty.setValue(workspacePreferences.shouldThemeSyncOs());
 
         fontOverrideProperty.setValue(workspacePreferences.shouldOverrideDefaultFontSize());
         fontSizeProperty.setValue(String.valueOf(workspacePreferences.getMainFontSize()));
@@ -139,6 +190,7 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
         openLastStartupProperty.setValue(workspacePreferences.shouldOpenLastEdited());
         showAdvancedHintsProperty.setValue(workspacePreferences.shouldShowAdvancedHints());
         inspectionWarningDuplicateProperty.setValue(workspacePreferences.shouldWarnAboutDuplicatesInInspection());
+
         confirmDeleteProperty.setValue(workspacePreferences.shouldConfirmDelete());
 
         collectTelemetryProperty.setValue(telemetryPreferences.shouldCollectTelemetry());
@@ -151,6 +203,9 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
 
         createBackupProperty.setValue(filePreferences.shouldCreateBackup());
         backupDirectoryProperty.setValue(filePreferences.getBackupDirectory().toString());
+
+        remoteServerProperty.setValue(remotePreferences.useRemoteServer());
+        remotePortProperty.setValue(String.valueOf(remotePreferences.getPort()));
     }
 
     @Override
@@ -166,14 +221,19 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
         workspacePreferences.setMainFontSize(Integer.parseInt(fontSizeProperty.getValue()));
 
         switch (selectedThemeProperty.get()) {
-            case LIGHT -> workspacePreferences.setTheme(Theme.light());
-            case DARK -> workspacePreferences.setTheme(Theme.dark());
-            case CUSTOM -> workspacePreferences.setTheme(Theme.custom(customPathToThemeProperty.getValue()));
+            case LIGHT ->
+                    workspacePreferences.setTheme(Theme.light());
+            case DARK ->
+                    workspacePreferences.setTheme(Theme.dark());
+            case CUSTOM ->
+                    workspacePreferences.setTheme(Theme.custom(customPathToThemeProperty.getValue()));
         }
+        workspacePreferences.setThemeSyncOs(themeSyncOsProperty.getValue());
 
         workspacePreferences.setOpenLastEdited(openLastStartupProperty.getValue());
         workspacePreferences.setShowAdvancedHints(showAdvancedHintsProperty.getValue());
         workspacePreferences.setWarnAboutDuplicatesInInspection(inspectionWarningDuplicateProperty.getValue());
+
         workspacePreferences.setConfirmDelete(confirmDeleteProperty.getValue());
 
         telemetryPreferences.setCollectTelemetry(collectTelemetryProperty.getValue());
@@ -185,6 +245,40 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
 
         filePreferences.createBackupProperty().setValue(createBackupProperty.getValue());
         filePreferences.backupDirectoryProperty().setValue(Path.of(backupDirectoryProperty.getValue()));
+
+        getPortAsInt(remotePortProperty.getValue()).ifPresent(newPort -> {
+            if (remotePreferences.isDifferentPort(newPort)) {
+                remotePreferences.setPort(newPort);
+            }
+        });
+
+        internalPreferences.setVersionCheckEnabled(versionCheckProperty.getValue());
+
+        getPortAsInt(remotePortProperty.getValue()).ifPresent(newPort -> {
+            if (remotePreferences.isDifferentPort(newPort)) {
+                remotePreferences.setPort(newPort);
+            }
+        });
+
+        // stop in all cases, because the port might have changed
+        Globals.REMOTE_LISTENER.stop();
+
+        if (remoteServerProperty.getValue()) {
+            remotePreferences.setUseRemoteServer(true);
+            Globals.REMOTE_LISTENER.openAndStart(new CLIMessageHandler(preferences, fileUpdateMonitor, entryTypesManager), remotePreferences.getPort());
+        } else {
+            remotePreferences.setUseRemoteServer(false);
+        }
+        trustStoreManager.flush();
+
+        if (remoteServerProperty.getValue()) {
+            remotePreferences.setUseRemoteServer(true);
+            Globals.REMOTE_LISTENER.openAndStart(new CLIMessageHandler(preferences, fileUpdateMonitor, entryTypesManager), remotePreferences.getPort());
+        } else {
+            remotePreferences.setUseRemoteServer(false);
+            Globals.REMOTE_LISTENER.stop();
+        }
+        trustStoreManager.flush();
     }
 
     public ValidationStatus fontSizeValidationStatus() {
@@ -198,6 +292,10 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
     @Override
     public boolean validateSettings() {
         CompositeValidator validator = new CompositeValidator();
+
+        if (remoteServerProperty.getValue()) {
+            validator.addValidators(remotePortValidator);
+        }
 
         if (fontOverrideProperty.getValue()) {
             validator.addValidators(fontSizeValidator);
@@ -235,6 +333,10 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
 
     public ObjectProperty<ThemeTypes> selectedThemeProperty() {
         return this.selectedThemeProperty;
+    }
+
+    public BooleanProperty themeSyncOsProperty() {
+        return this.themeSyncOsProperty;
     }
 
     public StringProperty customPathToThemeProperty() {
@@ -310,12 +412,28 @@ public class GeneralTabViewModel implements PreferenceTabViewModel {
                      .ifPresent(dir -> backupDirectoryProperty.setValue(dir.toString()));
     }
 
+    public BooleanProperty remoteServerProperty() {
+        return remoteServerProperty;
+    }
+
+    public StringProperty remotePortProperty() {
+        return remotePortProperty;
+    }
+
     public void openBrowser() {
         String url = "https://themes.jabref.org";
         try {
             JabRefDesktop.openBrowser(url, preferences.getFilePreferences());
         } catch (IOException e) {
             dialogService.showErrorDialogAndWait(Localization.lang("Could not open website."), e);
+        }
+    }
+
+    private Optional<Integer> getPortAsInt(String value) {
+        try {
+            return Optional.of(Integer.parseInt(value));
+        } catch (NumberFormatException ex) {
+            return Optional.empty();
         }
     }
 }
