@@ -48,7 +48,7 @@ public class PdfMergeMetadataImporter extends Importer {
             this.metadataImporters.add(new PdfGrobidImporter(importFormatPreferences));
         }
         this.metadataImporters.add(new PdfXmpImporter(importFormatPreferences.xmpPreferences()));
-        this.metadataImporters.add(new PdfContentImporter(importFormatPreferences));
+        this.metadataImporters.add(new PdfContentImporter());
     }
 
     @Override
@@ -79,7 +79,7 @@ public class PdfMergeMetadataImporter extends Importer {
             if (extractedEntries.isEmpty()) {
                 continue;
             }
-            candidates.add(extractedEntries.get(0));
+            candidates.add(extractedEntries.getFirst());
         }
         if (candidates.isEmpty()) {
             return new ParserResult();
