@@ -54,6 +54,7 @@ import org.jabref.logic.layout.format.FormatPagesForXML;
 import org.jabref.logic.layout.format.GetOpenOfficeType;
 import org.jabref.logic.layout.format.HTMLChars;
 import org.jabref.logic.layout.format.HTMLParagraphs;
+import org.jabref.logic.layout.format.HayagrivaType;
 import org.jabref.logic.layout.format.IfPlural;
 import org.jabref.logic.layout.format.Iso690FormatDate;
 import org.jabref.logic.layout.format.Iso690NamesAuthors;
@@ -143,8 +144,8 @@ class LayoutEntry {
         this.fileDirForDatabase = Objects.requireNonNullElse(fileDirForDatabase, Collections.emptyList());
 
         List<LayoutEntry> tmpEntries = new ArrayList<>();
-        String blockStart = parsedEntries.get(0).s;
-        String blockEnd = parsedEntries.get(parsedEntries.size() - 1).s;
+        String blockStart = parsedEntries.getFirst().s;
+        String blockEnd = parsedEntries.getLast().s;
 
         if (!blockStart.equals(blockEnd)) {
             LOGGER.warn("Field start and end entry must be equal.");
@@ -391,9 +392,9 @@ class LayoutEntry {
         List<String> v = StringUtil.tokenizeToList(s, "\n");
 
         if (v.size() == 1) {
-            text = v.get(0);
+            text = v.getFirst();
         } else {
-            text = v.get(0).trim();
+            text = v.getFirst().trim();
 
             option = getOptionalLayout(v.get(1));
             // See if there was an undefined formatter:
@@ -442,7 +443,7 @@ class LayoutEntry {
             case "CreateDocBook5Editors" -> new CreateDocBook5Editors();
             case "CurrentDate" -> new CurrentDate();
             case "DateFormatter" -> new DateFormatter();
-            case "DOICheck" -> new DOICheck();
+            case "DOICheck" -> new DOICheck(preferences.getDoiPreferences());
             case "DOIStrip" -> new DOIStrip();
             case "EntryTypeFormatter" -> new EntryTypeFormatter();
             case "FirstPage" -> new FirstPage();
@@ -484,6 +485,7 @@ class LayoutEntry {
             case "CSLType" -> new CSLType();
             case "ShortMonth" -> new ShortMonthFormatter();
             case "ReplaceWithEscapedDoubleQuotes" -> new ReplaceWithEscapedDoubleQuotes();
+            case "HayagrivaType" -> new HayagrivaType();
             default -> null;
         };
     }
@@ -496,7 +498,7 @@ class LayoutEntry {
         List<LayoutFormatter> results = new ArrayList<>(formatterStrings.size());
         Map<String, String> userNameFormatter = NameFormatter.getNameFormatters(preferences.getNameFormatterPreferences());
         for (List<String> strings : formatterStrings) {
-            String nameFormatterName = strings.get(0).trim();
+            String nameFormatterName = strings.getFirst().trim();
 
             // Check if this is a name formatter defined by this export filter:
             Optional<String> contents = preferences.getCustomExportNameFormatter(nameFormatterName);
