@@ -36,7 +36,7 @@ public class CanonicalBibEntry {
 
         // generate first line: type and citation key
         String citeKey = entry.getCitationKey().orElse("");
-        sb.append(String.format("@%s{%s,", entry.getType().getName(), citeKey)).append('\n');
+        sb.append("@%s{%s,".formatted(entry.getType().getName(), citeKey)).append('\n');
 
         // we have to introduce a new Map as fields are stored case-sensitive in JabRef (see https://github.com/koppor/jabref/issues/45).
         Map<String, String> mapFieldToValue = new HashMap<>();
@@ -57,11 +57,11 @@ public class CanonicalBibEntry {
         // generate field entries
         StringJoiner sj = new StringJoiner(",\n", "", "\n");
         for (String fieldName : sortedFields) {
-            String line = String.format("  %s = {%s}", fieldName, mapFieldToValue.get(fieldName));
+            String line = "  %s = {%s}".formatted(fieldName, mapFieldToValue.get(fieldName));
             sj.add(line);
         }
 
-        sj.add(String.format("  _jabref_shared = {sharedId: %d, version: %d}", entry.getSharedBibEntryData().getSharedID(), entry.getSharedBibEntryData().getVersion()));
+        sj.add("  _jabref_shared = {sharedId: %d, version: %d}".formatted(entry.getSharedBibEntryData().getSharedID(), entry.getSharedBibEntryData().getVersion()));
 
         sb.append(sj);
 
