@@ -1,14 +1,15 @@
 package org.jabref.model.openoffice.ootext;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Deque;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.Stack;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -145,7 +146,7 @@ public class OOTextIntoOO {
         cursor.collapseToEnd();
 
         MyPropertyStack formatStack = new MyPropertyStack(cursor);
-        Stack<String> expectEnd = new Stack<>();
+        Deque<String> expectEnd = new ArrayDeque<>();
 
         // We need to extract formatting. Use a simple regexp search iteration:
         int piv = 0;
@@ -216,12 +217,12 @@ public class OOTextIntoOO {
                                 } else {
                                     if (setParagraphStyle(cursor, value)) {
                                         // Presumably tested already:
-                                        LOGGER.debug(String.format("oo:ParaStyleName=\"%s\" failed", value));
+                                        LOGGER.debug("oo:ParaStyleName=\"%s\" failed".formatted(value));
                                     }
                                 }
                                 break;
                             default:
-                                LOGGER.warn(String.format("Unexpected attribute '%s' for <%s>", key, tagName));
+                                LOGGER.warn("Unexpected attribute '%s' for <%s>".formatted(key, tagName));
                                 break;
                         }
                     }
@@ -232,7 +233,7 @@ public class OOTextIntoOO {
                         String value = pair.b;
                         switch (key) {
                             case "target" -> UnoCrossRef.insertReferenceToPageNumberOfReferenceMark(doc, value, cursor);
-                            default -> LOGGER.warn(String.format("Unexpected attribute '%s' for <%s>", key, tagName));
+                            default -> LOGGER.warn("Unexpected attribute '%s' for <%s>".formatted(key, tagName));
                         }
                     }
                     break;
@@ -260,10 +261,10 @@ public class OOTextIntoOO {
                                     settings.addAll(setCharCaseMap(CaseMap.SMALLCAPS));
                                     break;
                                 }
-                                LOGGER.warn(String.format("Unexpected value %s for attribute '%s' for <%s>",
+                                LOGGER.warn("Unexpected value %s for attribute '%s' for <%s>".formatted(
                                         value, key, tagName));
                             }
-                            default -> LOGGER.warn(String.format("Unexpected attribute '%s' for <%s>", key, tagName));
+                            default -> LOGGER.warn("Unexpected attribute '%s' for <%s>".formatted(key, tagName));
                         }
                     }
                     formatStack.pushLayer(settings);
@@ -282,14 +283,14 @@ public class OOTextIntoOO {
                     formatStack.popLayer();
                     String expected = expectEnd.pop();
                     if (!tagName.equals(expected)) {
-                        LOGGER.warn(String.format("expected '<%s>', found '<%s>' after '%s'",
+                        LOGGER.warn("expected '<%s>', found '<%s>' after '%s'".formatted(
                                 expected,
                                 tagName,
                                 currentSubstring));
                     }
                     break;
                 default:
-                    LOGGER.warn(String.format("ignoring unknown tag '<%s>'", tagName));
+                    LOGGER.warn("ignoring unknown tag '<%s>'".formatted(tagName));
                     break;
             }
 
@@ -302,12 +303,12 @@ public class OOTextIntoOO {
         formatStack.apply(cursor);
         cursor.collapseToEnd();
 
-        if (!expectEnd.empty()) {
+        if (!expectEnd.isEmpty()) {
             StringBuilder rest = new StringBuilder();
             for (String s : expectEnd) {
-                rest.insert(0, String.format("<%s>", s));
+                rest.insert(0, "<%s>".formatted(s));
             }
-            LOGGER.warn(String.format("OOTextIntoOO.write: expectEnd stack is not empty at the end: %s%n", rest));
+            LOGGER.warn("OOTextIntoOO.write: expectEnd stack is not empty at the end: %s%n".formatted(rest));
         }
     }
 
@@ -438,7 +439,7 @@ public class OOTextIntoOO {
         /**
          * Maintain a stack of layers, each containing a description of the desired state of properties. Each description is an ArrayList of property values, Optional.empty() encoding "not directly set".
          */
-        final Stack<ArrayList<Optional<Object>>> layers;
+        final Deque<ArrayList<Optional<Object>>> layers;
 
         MyPropertyStack(XTextCursor cursor) {
             XPropertySet propertySet = UnoCast.cast(XPropertySet.class, cursor).get();
@@ -493,7 +494,7 @@ public class OOTextIntoOO {
                 }
             }
 
-            this.layers = new Stack<>();
+            this.layers = new ArrayDeque<>();
             this.layers.push(initialValuesOpt);
         }
 
@@ -509,7 +510,7 @@ public class OOTextIntoOO {
                 String name = pair.a;
                 Integer index = goodNameToIndex.get(name);
                 if (index == null) {
-                    LOGGER.warn(String.format("pushLayer: '%s' is not in goodNameToIndex", name));
+                    LOGGER.warn("pushLayer: '%s' is not in goodNameToIndex".formatted(name));
                     continue;
                 }
                 Object newValue = pair.b;
@@ -671,9 +672,9 @@ public class OOTextIntoOO {
             throw new java.lang.IllegalArgumentException("setCharLocale \"\" or null");
         }
         String[] parts = value.split("-");
-        String language = (parts.length > 0) ? parts[0] : "";
-        String country = (parts.length > 1) ? parts[1] : "";
-        String variant = (parts.length > 2) ? parts[2] : "";
+        String language = parts.length > 0 ? parts[0] : "";
+        String country = parts.length > 1 ? parts[1] : "";
+        String variant = parts.length > 2 ? parts[2] : "";
         return setCharLocale(new Locale(language, country, variant));
     }
 
