@@ -14,9 +14,9 @@ import java.util.Optional;
 
 import javafx.collections.FXCollections;
 
-import org.jabref.logic.citationkeypattern.AbstractCitationKeyPattern;
-import org.jabref.logic.citationkeypattern.DatabaseCitationKeyPattern;
-import org.jabref.logic.citationkeypattern.GlobalCitationKeyPattern;
+import org.jabref.logic.citationkeypattern.AbstractCitationKeyPatterns;
+import org.jabref.logic.citationkeypattern.DatabaseCitationKeyPatterns;
+import org.jabref.logic.citationkeypattern.GlobalCitationKeyPatterns;
 import org.jabref.logic.cleanup.FieldFormatterCleanup;
 import org.jabref.logic.cleanup.FieldFormatterCleanups;
 import org.jabref.logic.exporter.SaveConfiguration;
@@ -31,6 +31,8 @@ import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ParseException;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.util.OS;
+import org.jabref.model.TreeNode;
+import org.jabref.model.database.BibDatabase;
 import org.jabref.model.database.BibDatabaseMode;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.BibEntryType;
@@ -56,6 +58,7 @@ import org.jabref.model.groups.WordKeywordGroup;
 import org.jabref.model.metadata.SaveOrder;
 
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -75,7 +78,7 @@ import static org.mockito.Mockito.when;
  * Tests cannot be executed concurrently, because Localization is used at {@link BibtexParser#parseAndAddEntry(String)}
  */
 class BibtexParserTest {
-
+    private static final String BIB_DESK_ROOT_GROUP_NAME = "BibDeskGroups";
     private ImportFormatPreferences importFormatPreferences;
     private BibtexParser parser;
 
@@ -87,7 +90,7 @@ class BibtexParserTest {
     }
 
     @Test
-    void parseWithNullThrowsNullPointerException() throws Exception {
+    void parseWithNullThrowsNullPointerException() {
         Executable toBeTested = () -> parser.parse(null);
         assertThrows(NullPointerException.class, toBeTested);
     }
@@ -301,7 +304,7 @@ class BibtexParserTest {
         List<BibEntry> parsed = result.getDatabase().getEntries();
 
         assertEquals(List.of(expected), parsed);
-        assertEquals(expected.getUserComments(), parsed.get(0).getUserComments());
+        assertEquals(expected.getUserComments(), parsed.getFirst().getUserComments());
     }
 
     @Test
@@ -329,7 +332,7 @@ class BibtexParserTest {
         String secondEntry = "@inProceedings{foo," + "  author={Norton Bar}}";
         List<BibEntry> parsedEntries = parser.parse(new StringReader(firstEntry + secondEntry))
                                              .getDatabase().getEntries();
-        assertEquals(firstEntry, parsedEntries.get(0).getParsedSerialization());
+        assertEquals(firstEntry, parsedEntries.getFirst().getParsedSerialization());
         assertEquals(secondEntry, parsedEntries.get(1).getParsedSerialization());
     }
 
@@ -611,7 +614,7 @@ class BibtexParserTest {
 
         List<BibEntry> entries = result.getDatabase().getEntries();
 
-        assertEquals(Optional.of("author bracket #too##much#"), entries.get(0).getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("author bracket #too##much#"), entries.getFirst().getField(StandardField.AUTHOR));
     }
 
     @Test
@@ -632,7 +635,7 @@ class BibtexParserTest {
         List<BibEntry> entries = result.getDatabase().getEntries();
 
         assertEquals(1, entries.size());
-        assertEquals(Optional.of("author @ good"), entries.get(0).getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("author @ good"), entries.getFirst().getField(StandardField.AUTHOR));
     }
 
     @Test
@@ -769,6 +772,18 @@ class BibtexParserTest {
     void parseRecognizesString() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@string{bourdieu = {Bourdieu, Pierre}}"));
+
+        BibtexString string = result.getDatabase().getStringValues().iterator().next();
+
+        assertEquals(1, result.getDatabase().getStringCount());
+        assertEquals("bourdieu", string.getName());
+        assertEquals("Bourdieu, Pierre", string.getContent());
+    }
+
+    @Test
+    void parseRecognizesStringWithQuotes() throws IOException {
+        ParserResult result = parser
+                .parse(new StringReader("@string{bourdieu = \"Bourdieu, Pierre\"}"));
 
         BibtexString string = result.getDatabase().getStringValues().iterator().next();
 
@@ -1337,13 +1352,13 @@ class BibtexParserTest {
                 .parse(new StringReader("@comment{jabref-meta: keypattern_article:articleTest;}" + OS.NEWLINE
                         + "@comment{jabref-meta: keypatterndefault:test;}"));
 
-        GlobalCitationKeyPattern pattern = mock(GlobalCitationKeyPattern.class);
-        AbstractCitationKeyPattern bibtexKeyPattern = result.getMetaData().getCiteKeyPattern(pattern);
-        AbstractCitationKeyPattern expectedPattern = new DatabaseCitationKeyPattern(pattern);
-        expectedPattern.setDefaultValue("test");
-        expectedPattern.addCitationKeyPattern(StandardEntryType.Article, "articleTest");
+        GlobalCitationKeyPatterns pattern = mock(GlobalCitationKeyPatterns.class);
+        AbstractCitationKeyPatterns bibtexKeyPatterns = result.getMetaData().getCiteKeyPatterns(pattern);
+        AbstractCitationKeyPatterns expectedPatterns = new DatabaseCitationKeyPatterns(pattern);
+        expectedPatterns.setDefaultValue("test");
+        expectedPatterns.addCitationKeyPattern(StandardEntryType.Article, "articleTest");
 
-        assertEquals(expectedPattern, bibtexKeyPattern);
+        assertEquals(expectedPatterns, bibtexKeyPatterns);
     }
 
     @Test
@@ -1372,12 +1387,317 @@ class BibtexParserTest {
         assertEquals(3, root.getNumberOfChildren());
         assertEquals(
                 new RegexKeywordGroup("Fréchet", GroupHierarchyType.INDEPENDENT, StandardField.KEYWORDS, "FrechetSpace", false),
-                root.getChildren().get(0).getGroup());
+                root.getChildren().getFirst().getGroup());
         assertEquals(
                 new WordKeywordGroup("Invariant theory", GroupHierarchyType.INDEPENDENT, StandardField.KEYWORDS, "GIT", false, ',', false),
                 root.getChildren().get(1).getGroup());
         assertEquals(Arrays.asList("Key1", "Key2"),
                 ((ExplicitGroup) root.getChildren().get(2).getGroup()).getLegacyEntryKeys());
+    }
+
+    /**
+     * Checks that BibDesk Static Groups are available after parsing the library
+     */
+    @Test
+    void integrationTestBibDeskStaticGroup() throws Exception {
+        ParserResult result = parser.parse(new StringReader("""
+                @article{Swain:2023aa,
+                    author = {Subhashree Swain and P. Shalima and K.V.P. Latha},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06758},
+                    month = {09},
+                    title = {Unravelling the Nuclear Dust Morphology of NGC 1365: A Two Phase Polar - RAT Model for the Ultraviolet to Infrared Spectral Energy Distribution},
+                    url = {https://arxiv.org/pdf/2309.06758.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06758.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06758}}
+
+                @article{Heyl:2023aa,
+                    author = {Johannes Heyl and Joshua Butterworth and Serena Viti},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06784},
+                    month = {09},
+                    title = {Understanding Molecular Abundances in Star-Forming Regions Using Interpretable Machine Learning},
+                    url = {https://arxiv.org/pdf/2309.06784.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06784.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06784}}
+
+                @comment{BibDesk Static Groups{
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+                <plist version="1.0">
+                <array>
+                    <dict>
+                        <key>group name</key>
+                        <string>firstTestGroup</string>
+                        <key>keys</key>
+                        <string>Swain:2023aa,Heyl:2023aa</string>
+                    </dict>
+                    <dict>
+                        <key>group name</key>
+                        <string>secondTestGroup</string>
+                        <key>keys</key>
+                        <string>Swain:2023aa</string>
+                    </dict>
+                </array>
+                </plist>
+                }}
+                """));
+
+        GroupTreeNode root = result.getMetaData().getGroups().get();
+        assertEquals(new AllEntriesGroup("All entries"), root.getGroup());
+        assertEquals(Optional.of(BIB_DESK_ROOT_GROUP_NAME), root.getFirstChild().map(GroupTreeNode::getName));
+
+        ExplicitGroup firstTestGroupExpected = new ExplicitGroup("firstTestGroup", GroupHierarchyType.INDEPENDENT, ',');
+        firstTestGroupExpected.setExpanded(true);
+
+        assertEquals(Optional.of(firstTestGroupExpected), root.getFirstChild().flatMap(TreeNode::getFirstChild).map(GroupTreeNode::getGroup));
+
+        ExplicitGroup secondTestGroupExpected = new ExplicitGroup("secondTestGroup", GroupHierarchyType.INDEPENDENT, ',');
+        secondTestGroupExpected.setExpanded(true);
+        assertEquals(Optional.of(secondTestGroupExpected), root.getFirstChild().flatMap(TreeNode::getLastChild).map(GroupTreeNode::getGroup));
+
+        BibDatabase db = result.getDatabase();
+
+        assertEquals(List.of(root.getGroup(), firstTestGroupExpected), root.getContainingGroups(db.getEntries(), true).stream().map(GroupTreeNode::getGroup).toList());
+        assertEquals(List.of(root.getGroup(), firstTestGroupExpected), root.getContainingGroups(db.getEntryByCitationKey("Heyl:2023aa").stream().toList(), false).stream().map(GroupTreeNode::getGroup).toList());
+    }
+
+    /**
+     * Checks that BibDesk Smart Groups are available after parsing the library
+     */
+    @Test
+    @Disabled("Not yet supported")
+    void integrationTestBibDeskSmartGroup() throws Exception {
+        ParserResult result = parser.parse(new StringReader("""
+                @article{Kraljic:2023aa,
+                    author = {Katarina Kraljic and Florent Renaud and Yohan Dubois and Christophe Pichon and Oscar Agertz and Eric Andersson and Julien Devriendt and Jonathan Freundlich and Sugata Kaviraj and Taysun Kimm and Garreth Martin and S{\\'e}bastien Peirani and {\\'A}lvaro Segovia Otero and Marta Volonteri and Sukyoung K. Yi},
+                    date-added = {2023-09-14 20:09:10 +0200},
+                    date-modified = {2023-09-14 20:09:10 +0200},
+                    eprint = {2309.06485},
+                    month = {09},
+                    title = {Emergence and cosmic evolution of the Kennicutt-Schmidt relation driven by interstellar turbulence},
+                    url = {https://arxiv.org/pdf/2309.06485.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06485.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06485}}
+
+                @article{Swain:2023aa,
+                    author = {Subhashree Swain and P. Shalima and K.V.P. Latha},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06758},
+                    month = {09},
+                    title = {Unravelling the Nuclear Dust Morphology of NGC 1365: A Two Phase Polar - RAT Model for the Ultraviolet to Infrared Spectral Energy Distribution},
+                    url = {https://arxiv.org/pdf/2309.06758.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06758.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06758}}
+
+                @article{Heyl:2023aa,
+                    author = {Johannes Heyl and Joshua Butterworth and Serena Viti},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06784},
+                    month = {09},
+                    title = {Understanding Molecular Abundances in Star-Forming Regions Using Interpretable Machine Learning},
+                    url = {https://arxiv.org/pdf/2309.06784.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06784.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06784}}
+
+                @comment{BibDesk Smart Groups{
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+                <plist version="1.0">
+                <array>
+                    <dict>
+                        <key>conditions</key>
+                        <array>
+                            <dict>
+                                <key>comparison</key>
+                                <integer>4</integer>
+                                <key>key</key>
+                                <string>BibTeX Type</string>
+                                <key>value</key>
+                                <string>article</string>
+                                <key>version</key>
+                                <string>1</string>
+                            </dict>
+                            <dict>
+                                <key>comparison</key>
+                                <integer>2</integer>
+                                <key>key</key>
+                                <string>Title</string>
+                                <key>value</key>
+                                <string>the</string>
+                                <key>version</key>
+                                <string>1</string>
+                            </dict>
+                        </array>
+                        <key>conjunction</key>
+                        <integer>0</integer>
+                        <key>group name</key>
+                        <string>article</string>
+                    </dict>
+                    <dict>
+                        <key>conditions</key>
+                        <array>
+                            <dict>
+                                <key>comparison</key>
+                                <integer>3</integer>
+                                <key>key</key>
+                                <string>Author</string>
+                                <key>value</key>
+                                <string>Swain</string>
+                                <key>version</key>
+                                <string>1</string>
+                            </dict>
+                        </array>
+                        <key>conjunction</key>
+                        <integer>0</integer>
+                        <key>group name</key>
+                        <string>Swain</string>
+                    </dict>
+                </array>
+                </plist>
+                }}
+                """));
+
+        GroupTreeNode root = result.getMetaData().getGroups().get();
+        assertEquals(new AllEntriesGroup("All entries"), root.getGroup());
+        assertEquals(2, root.getNumberOfChildren());
+        ExplicitGroup firstTestGroupExpected = new ExplicitGroup("article", GroupHierarchyType.INDEPENDENT, ',');
+        firstTestGroupExpected.setExpanded(false);
+        assertEquals(firstTestGroupExpected, root.getChildren().getFirst().getGroup());
+        ExplicitGroup secondTestGroupExpected = new ExplicitGroup("Swain", GroupHierarchyType.INDEPENDENT, ',');
+        secondTestGroupExpected.setExpanded(false);
+        assertEquals(secondTestGroupExpected, root.getChildren().get(1).getGroup());
+
+        BibDatabase db = result.getDatabase();
+        List<BibEntry> firstTestGroupEntriesExpected = new ArrayList<>();
+        firstTestGroupEntriesExpected.add(db.getEntryByCitationKey("Kraljic:2023aa").get());
+        firstTestGroupEntriesExpected.add(db.getEntryByCitationKey("Swain:2023aa").get());
+        assertTrue(root.getChildren().getFirst().getGroup().containsAll(firstTestGroupEntriesExpected));
+        assertFalse(root.getChildren().get(1).getGroup().contains(db.getEntryByCitationKey("Swain:2023aa").get()));
+    }
+
+    /**
+     * Checks that both BibDesk Static Groups and Smart Groups are available after parsing the library
+     */
+    @Test
+    @Disabled("Not yet supported")
+    void integrationTestBibDeskMultipleGroup() throws Exception {
+        ParserResult result = parser.parse(new StringReader("""
+                @article{Kraljic:2023aa,
+                    author = {Katarina Kraljic and Florent Renaud and Yohan Dubois and Christophe Pichon and Oscar Agertz and Eric Andersson and Julien Devriendt and Jonathan Freundlich and Sugata Kaviraj and Taysun Kimm and Garreth Martin and S{\\'e}bastien Peirani and {\\'A}lvaro Segovia Otero and Marta Volonteri and Sukyoung K. Yi},
+                    date-added = {2023-09-14 20:09:10 +0200},
+                    date-modified = {2023-09-14 20:09:10 +0200},
+                    eprint = {2309.06485},
+                    month = {09},
+                    title = {Emergence and cosmic evolution of the Kennicutt-Schmidt relation driven by interstellar turbulence},
+                    url = {https://arxiv.org/pdf/2309.06485.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06485.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06485}}
+
+                @article{Swain:2023aa,
+                    author = {Subhashree Swain and P. Shalima and K.V.P. Latha},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06758},
+                    month = {09},
+                    title = {Unravelling the Nuclear Dust Morphology of NGC 1365: A Two Phase Polar - RAT Model for the Ultraviolet to Infrared Spectral Energy Distribution},
+                    url = {https://arxiv.org/pdf/2309.06758.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06758.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06758}}
+
+                @article{Heyl:2023aa,
+                    author = {Johannes Heyl and Joshua Butterworth and Serena Viti},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06784},
+                    month = {09},
+                    title = {Understanding Molecular Abundances in Star-Forming Regions Using Interpretable Machine Learning},
+                    url = {https://arxiv.org/pdf/2309.06784.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06784.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06784}}
+
+                @comment{BibDesk Static Groups{
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+                <plist version="1.0">
+                <array>
+                    <dict>
+                        <key>group name</key>
+                        <string>firstTestGroup</string>
+                        <key>keys</key>
+                        <string>Swain:2023aa,Heyl:2023aa</string>
+                    </dict>
+                </array>
+                </plist>
+                }}
+
+                @comment{BibDesk Smart Groups{
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+                <plist version="1.0">
+                <array>
+                    <dict>
+                        <key>conditions</key>
+                        <array>
+                            <dict>
+                                <key>comparison</key>
+                                <integer>4</integer>
+                                <key>key</key>
+                                <string>BibTeX Type</string>
+                                <key>value</key>
+                                <string>article</string>
+                                <key>version</key>
+                                <string>1</string>
+                            </dict>
+                            <dict>
+                                <key>comparison</key>
+                                <integer>2</integer>
+                                <key>key</key>
+                                <string>Title</string>
+                                <key>value</key>
+                                <string>the</string>
+                                <key>version</key>
+                                <string>1</string>
+                            </dict>
+                        </array>
+                        <key>conjunction</key>
+                        <integer>0</integer>
+                        <key>group name</key>
+                        <string>article</string>
+                    </dict>
+                </array>
+                </plist>
+                }}
+                """));
+
+        GroupTreeNode root = result.getMetaData().getGroups().get();
+        assertEquals(new AllEntriesGroup("All entries"), root.getGroup());
+        assertEquals(2, root.getNumberOfChildren());
+        ExplicitGroup firstTestGroupExpected = new ExplicitGroup("firstTestGroup", GroupHierarchyType.INDEPENDENT, ',');
+        firstTestGroupExpected.setExpanded(false);
+        assertEquals(firstTestGroupExpected, root.getChildren().getFirst().getGroup());
+        ExplicitGroup secondTestGroupExpected = new ExplicitGroup("article", GroupHierarchyType.INDEPENDENT, ',');
+        secondTestGroupExpected.setExpanded(false);
+        assertEquals(secondTestGroupExpected, root.getChildren().get(1).getGroup());
+
+        BibDatabase db = result.getDatabase();
+        assertTrue(root.getChildren().getFirst().getGroup().containsAll(db.getEntries()));
+        List<BibEntry> smartGroupEntriesExpected = new ArrayList<>();
+        smartGroupEntriesExpected.add(db.getEntryByCitationKey("Kraljic:2023aa").get());
+        smartGroupEntriesExpected.add(db.getEntryByCitationKey("Swain:2023aa").get());
+        assertTrue(root.getChildren().getFirst().getGroup().containsAll(smartGroupEntriesExpected));
     }
 
     /**
@@ -1404,7 +1724,7 @@ class BibtexParserTest {
 
         GroupTreeNode root = result.getMetaData().getGroups().get();
 
-        assertEquals(((TexGroup) root.getChildren().get(0).getGroup()).getFilePath(),
+        assertEquals(((TexGroup) root.getChildren().getFirst().getGroup()).getFilePath(),
                 Path.of("src/test/resources/org/jabref/model/groups/paper.aux"));
     }
 
@@ -1487,7 +1807,7 @@ class BibtexParserTest {
         List<BibEntry> entries = parserResult.getDatabase().getEntries();
 
         assertEquals(1, entries.size());
-        assertEquals("", entries.get(0).getUserComments());
+        assertEquals("", entries.getFirst().getUserComments());
     }
 
     @Test
@@ -1862,5 +2182,62 @@ class BibtexParserTest {
                 """;
         ParserResult result = parser.parse(new StringReader(entries));
         assertEquals(List.of(expectedEntryFirst, expectedEntrySecond), result.getDatabase().getEntries());
+    }
+
+    @Test
+    void parseBibDeskLinkedFiles() throws IOException {
+
+        BibEntry expectedEntry = new BibEntry(StandardEntryType.Article);
+        expectedEntry.withCitationKey("Kovakkuni:2023aa")
+                     .withField(StandardField.AUTHOR, "Navyasree Kovakkuni and Federico Lelli and Pierre-alain Duc and M{\\'e}d{\\'e}ric Boquien and Jonathan Braine and Elias Brinks and Vassilis Charmandaris and Francoise Combes and Jeremy Fensch and Ute Lisenfeld and Stacy McGaugh and J. Chris Mihos and Marcel. S. Pawlowski and Yves. Revaz and Peter. M. Weilbacher")
+                     .withField(new UnknownField("date-added"), "2023-09-14 20:09:12 +0200")
+                     .withField(new UnknownField("date-modified"), "2023-09-14 20:09:12 +0200")
+                     .withField(StandardField.EPRINT, "2309.06478")
+                     .withField(StandardField.MONTH, "09")
+                     .withField(StandardField.TITLE, "Molecular and Ionized Gas in Tidal Dwarf Galaxies: The Spatially Resolved Star-Formation Relation")
+                     .withField(StandardField.URL, "https://arxiv.org/pdf/2309.06478.pdf")
+                     .withField(StandardField.YEAR, "2023")
+                     .withField(new UnknownField("bdsk-url-1"), "https://arxiv.org/abs/2309.06478")
+                     .withField(StandardField.FILE, ":../../Downloads/2309.06478.pdf:");
+
+        ParserResult result = parser.parse(new StringReader("""
+                @article{Kovakkuni:2023aa,
+                    author = {Navyasree Kovakkuni and Federico Lelli and Pierre-alain Duc and M{\\'e}d{\\'e}ric Boquien and Jonathan Braine and Elias Brinks and Vassilis Charmandaris and Francoise Combes and Jeremy Fensch and Ute Lisenfeld and Stacy McGaugh and J. Chris Mihos and Marcel. S. Pawlowski and Yves. Revaz and Peter. M. Weilbacher},
+                    date-added = {2023-09-14 20:09:12 +0200},
+                    date-modified = {2023-09-14 20:09:12 +0200},
+                    eprint = {2309.06478},
+                    month = {09},
+                    title = {Molecular and Ionized Gas in Tidal Dwarf Galaxies: The Spatially Resolved Star-Formation Relation},
+                    url = {https://arxiv.org/pdf/2309.06478.pdf},
+                    year = {2023},
+                    bdsk-file-1 = {YnBsaXN0MDDSAQIDBFxyZWxhdGl2ZVBhdGhZYWxpYXNEYXRhXxAeLi4vLi4vRG93bmxvYWRzLzIzMDkuMDY0NzgucGRmTxEBUgAAAAABUgACAAAMTWFjaW50b3NoIEhEAAAAAAAAAAAAAAAAAAAA4O/yLkJEAAH/////DjIzMDkuMDY0NzgucGRmAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/////hKRkeAAAAAAAAAAAAAgACAAAKIGN1AAAAAAAAAAAAAAAAAAlEb3dubG9hZHMAAAIAKy86VXNlcnM6Y2hyaXN0b3BoczpEb3dubG9hZHM6MjMwOS4wNjQ3OC5wZGYAAA4AHgAOADIAMwAwADkALgAwADYANAA3ADgALgBwAGQAZgAPABoADABNAGEAYwBpAG4AdABvAHMAaAAgAEgARAASAClVc2Vycy9jaHJpc3RvcGhzL0Rvd25sb2Fkcy8yMzA5LjA2NDc4LnBkZgAAEwABLwAAFQACABH//wAAAAgADQAaACQARQAAAAAAAAIBAAAAAAAAAAUAAAAAAAAAAAAAAAAAAAGb},
+                    bdsk-url-1 = {https://arxiv.org/abs/2309.06478}}
+                    }
+                """));
+        BibDatabase database = result.getDatabase();
+
+        assertEquals(Collections.singletonList(expectedEntry), database.getEntries());
+    }
+
+    @Test
+    void parseInvalidBibDeskFilesResultsInWarnings() throws IOException {
+        // the first entry is invalid base 64, the second entry is correct plist format but does not contain the key
+        String entries = """
+                @Article{Test2017,
+                    bdsk-file-1 = {////=},
+                }
+
+                @Article{Test2,
+                   bdsk-file-1 = {YnBsaXN0MDDUAQIDBAUGJCVYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoKgHCBMUFRYaIVUkbnVsbNMJCgsMDxJXTlMua2V5c1pOUy5vYmplY3RzViRjbGFzc6INDoACgAOiEBGABIAFgAdccmVsYXRpdmVQYXRoWWFsaWFzRGF0YV8QVi4uLy4uLy4uL1BhcGVycy9Bc2hlaW0yMDA1IFRoZSBHZW9ncmFwaHkgb2YgSW5ub3ZhdGlvbiBSZWdpb25hbCBJbm5vdmF0aW9uIFN5c3RlbXMucGRm0hcLGBlXTlMuZGF0YU8RAkoAAAAAAkoAAgAADE1hY2ludG9zaCBIRAAAAAAAAAAAAAAAAAAAAM6T/wtIKwAAACI+9B9Bc2hlaW0yMDA1IFRoZSBHZW9nciMyMjQ4QzkucGRmAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIkjJw6jvRAAAAAAAAAAAAAMAAgAACSAAAAAAAAAAAAAAAAAAAAAGUGFwZXJzABAACAAAzpPw+wAAABEACAAAw6jhNAAAAAEAEAAiPvQAIjTXACHV2wAHw2AAAgBQTWFjaW50b3NoIEhEOlVzZXJzOgBpbGlwcGVydDoARG9jdW1lbnRzOgBQYXBlcnM6AEFzaGVpbTIwMDUgVGhlIEdlb2dyIzIyNDhDOS5wZGYADgCOAEYAQQBzAGgAZQBpAG0AMgAwADAANQAgAFQAaABlACAARwBlAG8AZwByAGEAcABoAHkAIABvAGYAIABJAG4AbgBvAHYAYQB0AGkAbwBuACAAUgBlAGcAaQBvAG4AYQBsACAASQBuAG4AbwB2AGEAdABpAG8AbgAgAFMAeQBzAHQAZQBtAHMALgBwAGQAZgAPABoADABNAGEAYwBpAG4AdABvAHMAaAAgAEgARAASAGZVc2Vycy9pbGlwcGVydC9Eb2N1bWVudHMvUGFwZXJzL0FzaGVpbTIwMDUgVGhlIEdlb2dyYXBoeSBvZiBJbm5vdmF0aW9uIFJlZ2lvbmFsIElubm92YXRpb24gU3lzdGVtcy5wZGYAEwABLwAAFQACAA///wAAgAbSGxwdHlokY2xhc3NuYW1lWCRjbGFzc2VzXU5TTXV0YWJsZURhdGGjHR8gVk5TRGF0YVhOU09iamVjdNIbHCIjXE5TRGljdGlvbmFyeaIiIF8QD05TS2V5ZWRBcmNoaXZlctEmJ1Ryb290gAEACAARABoAIwAtADIANwBAAEYATQBVAGAAZwBqAGwAbgBxAHMAdQB3AIQAjgDnAOwA9ANCA0QDSQNUA10DawNvA3YDfwOEA5EDlAOmA6kDrgAAAAAAAAIBAAAAAAAAACgAAAAAAAAAAAAAAAAAAAOw},
+                },
+                """;
+        ParserResult result = parser.parse(new StringReader(entries));
+
+        BibEntry firstEntry = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("Test2017");
+        BibEntry secondEntry = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("Test2");
+
+        assertEquals(List.of(firstEntry, secondEntry), result.getDatabase().getEntries());
     }
 }
